--- a/wumpus.html
+++ b/wumpus.html
@@ -36,11 +36,11 @@
                     <img src="" alt="bat" class="bat cell-center" hidden> -->
             </div>
             <div id="controls">
-                <button onclick="action('w');">Up</button>
+                <button onclick="action('W');">Up</button>
                 <div>
-                    <button onclick="action('a');">Left</button>
-                    <button onclick="action('s');">Down</button>
-                    <button onclick="action('d');">Right</button>
+                    <button onclick="action('A');">Left</button>
+                    <button onclick="action('S');">Down</button>
+                    <button onclick="action('D');">Right</button>
                 </div>
             </div>
         </section>
